# alg-fabbri-IPRJ-UERJ

./: .gitignore  .travis.yml  CMakeLists.txt  GEMINI.md  GEMNI.md  README.md
.github/workflows/: benchmark.yml
alg/: CMakeLists.txt
alg/Sort/: CMakeLists.txt  sort.cpp  sort.h
alg/Sort/benchmark/: CMakeLists.txt
alg/Sort/cmd/: CMakeLists.txt  sort-cmd.cpp
alg/Sort/tests/: CMakeLists.txt
alg/graph/: CMakeLists.txt  tree.cpp  tree.h
alg/graph/benchmark/: CMakeLists.txt  bm_tree.cpp
alg/graph/cmd/: CMakeLists.txt  tree-cmd.cpp
alg/graph/tests/: CMakeLists.txt  run-graph-tests  run-graph-tests[1]_include.cmake  run-graph-tests[1]_tests.cmake  test-tree.cpp
alg/list/: CMakeLists.txt  linked_list.cpp  linked_list.h
alg/list/benchmark/: CMakeLists.txt  bm_linked_list.cpp
alg/list/cmd/: CMakeLists.txt  linked_list-cmd.cpp
alg/list/tests/: CMakeLists.txt  run-list-tests  run-list-tests[1]_include.cmake  run-list-tests[1]_tests.cmake  test-linked_list.cpp
alg/merge/: CMakeLists.txt  Listas  linked_list_string.cpp  linked_list_string.h  linked_list_string_esolha.cpp  sorted_merge_3way.cpp  sorted_merge_3way.h
alg/merge/benchmark/: CMakeLists.txt  bm_sorted_merge_3way.cpp
alg/merge/cmd/: CMakeLists.txt  linked_list_string-cmd.cpp  sorted_merge_3way-cmd.cpp
alg/merge/tests/: CMakeLists.txt  test-sorted_merge_3way.cpp
alg/sort/: CMakeLists.txt  sort_char.cpp  sort_char.h
alg/sort/benchmark/: CMakeLists.txt  bm_sort_char.cpp
alg/sort/cmd/: CMakeLists.txt  sort_char-cmd.cpp
alg/sort/tests/: CMakeLists.txt  run-sort-tests  run-sort-tests[1]_include.cmake  run-sort-tests[1]_tests.cmake  test-sort_char.cpp
aula-pratica1/: README.md
aula-pratica1/exemplo1-manual/: README.md  hello-ia.cpp  hello.cpp
aulas/aula-pratica2/: README.md
aulas/aula-pratica3/: README.md
aulas/aula-pratica4/: README.md
config/gemini/: settings.json
dev/bench/: data.js  index.html
scripts/: centipede
